Feat: adding postgresql database service & settings connection

--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,8 @@
 SECRET_KEY=<DJANGO_SECRET_KEY>
 ALLOWED_HOSTS=<HOSTS>
 DEBUG=<DJANGO_DEBUG>
+
+DB_USER_PASS=<SUPER_PASSWORD>
+DB_USER=<USER_LIKE_POSTGRES>
+DB_NAME=<DATABASE_NAME>
+DB_HOST=<DATABASE_HOST>
