--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,33 @@ services:
       - ./src:/usr/src/birracraft
     ports:
       - 8000:8000
+    networks:
+      birracraft-net:
+
+  db:
+    image: postgres:14-alpine3.15
+    container_name: birracraft-pgsql
+    env_file:
+      - .env
+    ports:
+      - 5432:5432
+    volumes:
+      - pgsql_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: ${DB_USER_PASS}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_DB: ${DB_NAME}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      interval: 10s
+      timeout: 15s
+      retries: 10
+    restart: "always"
+    networks:
+      birracraft-net:
+
+volumes:
+  pgsql_data:
+
+networks:
+  birracraft-net:
