--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,29 @@ services:
   birracraft:
     build:
       context: ./src
-      dockerfile: Dockerfile
+      target: base
     container_name: birracraft
-    command: python manage.py runserver 0.0.0.0:8000
     env_file:
       - .env
+    expose:
+      - 8000
     volumes:
-      - ./src:/usr/src/birracraft
+      - static_volume:/static
+    restart: "always"
+    networks:
+      birracraft-net:
+
+  nginx:
+    image: nginx:1.19.0-alpine
+    container_name: birracraft-nginx
     ports:
-      - 8000:8000
+      - "6060:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_volume:/static
+    depends_on:
+      - birracraft
+    restart: "always"
     networks:
       birracraft-net:
 
@@ -23,7 +37,7 @@ services:
     env_file:
       - .env
     ports:
-      - 5432:5432
+      - 5434:5432
     volumes:
       - pgsql_data:/var/lib/postgresql/data
     environment:
@@ -31,7 +45,7 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_DB: ${DB_NAME}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 10s
       timeout: 15s
       retries: 10
@@ -41,6 +55,7 @@ services:
 
 volumes:
   pgsql_data:
+  static_volume:
 
 networks:
   birracraft-net:
