--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,11 @@ version: '3.7'
 
 services:
 
-  birracraft:
+  api:
     build:
       context: ./src
       target: base
-    container_name: birracraft
+    container_name: birracraft-api
     env_file:
       - .env
     expose:
@@ -26,7 +26,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/static
     depends_on:
-      - birracraft
+      - api
     restart: "always"
     networks:
       birracraft-net:
@@ -59,7 +59,9 @@ services:
       dockerfile: Dockerfile
     container_name: birracraft-web
     ports:
-      - 3000:3000
+      - 3003:3000
+    depends_on:
+      - api
     restart: "always"
     networks:
       birracraft-net:
