--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,5 @@
-upstream birracraft {
-    server birracraft:8000;
+upstream api {
+    server api:8000;
 }
 
 server {
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://birracraft;
+        proxy_pass http://api;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
