--- a/.docker-compose.override.yml
+++ b/.docker-compose.override.yml
@@ -14,6 +14,9 @@ services:
       - 8000:8000
     volumes:
       - ./src:/usr/src/birracraft
+    depends_on:
+      db:
+        condition: service_healthy
     restart: "always"
     networks:
       birracraft-net:
