--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,9 @@ services:
       - 8000
     volumes:
       - static_volume:/static
+    depends_on:
+      db:
+        condition: service_healthy
     restart: "always"
     networks:
       birracraft-net:
