Ref: web service added to nginx & dependencies for React

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,11 +25,13 @@ services:
     container_name: birracraft-nginx
     ports:
       - "6868:80"
+      - "8686:86"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/static
     depends_on:
       - api
+      - web
     restart: "always"
     networks:
       birracraft-net:
@@ -61,8 +63,8 @@ services:
       context: ./web
       dockerfile: Dockerfile
     container_name: birracraft-web
-    ports:
-      - 3003:3000
+    expose:
+      - 3000
     depends_on:
       - api
     restart: "always"
