--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,9 +2,16 @@ upstream api {
     server api:8000;
 }
 
+upstream web {
+    server web:3000;
+}
+
 server {
 
     listen 80;
+
+    access_log /var/log/nginx/api.access.log;
+    error_log /var/log/nginx/api.error.log;
 
     location / {
         proxy_pass http://api;
@@ -16,5 +23,24 @@ server {
 
     location /static/ {
         alias /static/;
+    }
+}
+
+server {
+
+    listen 86;
+
+    access_log /var/log/nginx/web.access.log;
+    error_log /var/log/nginx/web.error.log;
+
+    location / {
+        proxy_pass http://web;
+    }
+
+    location /sockjs-node {
+        proxy_pass http://web;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 }
