--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,10 +71,34 @@ services:
     networks:
       birracraft-net:
 
+  netdata:
+    image: netdata/netdata:stable
+    container_name: birracraft-netdata
+    ports:
+      - 8699:19999
+    restart: "unless-stopped"
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - apparmor:unconfined
+    volumes:
+      - netdataconfig:/etc/netdata
+      - netdatalib:/var/lib/netdata
+      - netdatacache:/var/cache/netdata
+      - /etc/passwd:/host/etc/passwd:ro
+      - /etc/group:/host/etc/group:ro
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /etc/os-release:/host/etc/os-release:ro
+    networks:
+      birracraft-net:
 
 volumes:
   pgsql_data:
   static_volume:
+  netdataconfig:
+  netdatalib:
+  netdatacache:
 
 networks:
   birracraft-net:
