--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,9 @@ DB_USER_PASS=<SUPER_PASSWORD>
 DB_USER=<USER_LIKE_POSTGRES>
 DB_NAME=<DATABASE_NAME>
 DB_HOST=<DATABASE_HOST>
+
+EMAIL_BACKEND=<EMAIL_BACKEND>
+EMAIL_USE_TLS=<EMAIL_USE_TLS>
+EMAIL_HOST=<EMAIL_HOST>
+EMAIL_PORT=<EMAIL_PORT>
+DEFAULT_FROM_EMAIL=<DEFAULT_FROM_EMAIL>
