Feat: registration verify through email validation

--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ django
 djangorestframework
 djangorestframework-simplejwt
 django-cors-headers
+django-utils-six
 coreapi
 gunicorn
 psycopg2-binary
