--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,9 +1,9 @@
-django
-djangorestframework
-djangorestframework-simplejwt
-django-cors-headers
-django-utils-six
-coreapi
-gunicorn
-psycopg2-binary
-tzdata
+django==4.0.4
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.1.0
+django-cors-headers==3.12.0
+django-utils-six==2.0
+coreapi==2.3.3
+gunicorn==20.1.0
+psycopg2-binary==2.9.3
+tzdata==2022.1
