--- a/.env.template
+++ b/.env.template
@@ -7,6 +7,9 @@ DB_USER=<USER_LIKE_POSTGRES>
 DB_NAME=<DATABASE_NAME>
 DB_HOST=<DATABASE_HOST>
 
+CELERY_BROKER_URL=<CELERY_BROKER_URL>
+CELERY_RESULT_BACKEND=<CELERY_RESULT_BACKEND>
+
 EMAIL_BACKEND=<EMAIL_BACKEND>
 EMAIL_USE_TLS=<EMAIL_USE_TLS>
 EMAIL_HOST=<EMAIL_HOST>
